My Donations: - Fix column width - Truncate recipient name when the column isn't big enough

--- a/src/views/Give/YieldRecipients.scss
+++ b/src/views/Give/YieldRecipients.scss
@@ -1,3 +1,12 @@
 .grey {
   color: #a3a3a3;
 }
+
+// CSS class for truncating a string and applying an ellipsis
+// Source: http://www.mattsnider.com/css-string-truncation-with-ellipsis/
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
+  -o-text-overflow: ellipsis; // for Opera 9 & 10
+}
